--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,6 @@ jobs:
         shell: bash
         run: |
           cd /home/ubuntu/playbook
-          ansible-playbook aws-playbook.yml &
-          ansible-playbook gcp-playbook.yml &
+           ansible-playbook gcp-playbook.yml &
+           ansible-playbook aws-playbook.yml
+       
