--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: run playbook
         shell: bash
         run: |
-          cd /home/ubuntu/playbook
+          cd /home/ubuntu/playbook/github-ansible-scale-demo
            ansible-playbook gcp-playbook.yml &
            ansible-playbook vmw-playbook.yml &
            ansible-playbook aws-playbook.yml
